@@ -9,13 +9,10 @@
 <fieldset class="form">
 	<legend><?cs var:html_escape(Lang.Legend.ConfigProcess) ?> </legend>
 
-	<form method="post" action="<?cs call:link("","","","","","") ?>" enctype="application/x-www-form-urlencoded">
+	<?cs call:form_header("config_processing") ?>
 		<input type="hidden" name="config_subset" value="processing" />
 
 		<?cs call:show_options(UI.Options.Config.Processing) ?>
-
-		<!-- include default form values -->
-		<?cs include:TemplateDir + '/form_common.cs' ?>
 
 		<input type="hidden" name="action" value="config_do" />
 		<button type="submit" name="send" value="do"><?cs var:html_escape(Lang.Buttons.UpdateConfiguration) ?></button>
@@ -24,3 +21,4 @@
 </fieldset>
 
 <?cs include:TemplateDir + '/help_tag_susbtitution.cs' ?>
+
