@@ -4,12 +4,13 @@ Version 3.2 - 04/14/02006
  * support for multi-domain setups
  * detect preferred interface language
  * user-specific interface language selection
- * handling of empty settings for ezmlm-idx 5.0 fixed (closes #21)
+ * support for listing of subscription log
+ * a prefix for the local part of mailing list addresses is now configurable
  * script for creating binary suid wrappers added
+ * handling of empty settings for ezmlm-idx 5.0 fixed (closes #21)
  * bug in MySQL support fixed
  * handling of the special character "dot" in listname and list address fixed
  * the formerly required module "Encode" is now optional
- * support for listing of subscription log
 
 Version 3.1.4 - 03/26/02006
  * new setting: DOTQMAIL_DIR (useful for multi domain vpopmail setups)
